Fix alignment issues in media library

--- a/_src/scss/common.scss
+++ b/_src/scss/common.scss
@@ -16,8 +16,7 @@
 	}
 
 	.wp-smush-send {
-		display: inline-block;
-		float: left;
+		display: block;
 		margin-right: 5px;
 	}
 
